Add controller for mysql role (#6)
