# api/openapi-spec/swagger.json
@@ -1937,6 +1937,10 @@
         "name": {
           "description": "Specifies the name for this database connection",
           "type": "string"
+        },
+        "pluginName": {
+          "description": "Specifies the name of the plugin to use for this connection. Default plugin:\n\t- for postgres: postgresql-database-plugin\n - for mysql: mysql-database-plugin",
+          "type": "string"
         }
       }
     },
