# apis/authorization/v1alpha1/types.go
@@ -11,6 +11,10 @@ const (
 	ResourcePostgresRole     = "postgresrole"
 	ResourcePostgresRoles    = "postgresroles"
 
+	ResourceKindMysqlRole = "MysqlRole"
+	ResourceMysqlRole     = "mysqlrole"
+	ResourceMysqlRoles    = "mysqlroles"
+
 	ResourceKindPostgresRoleBinding = "PostgresRoleBinding"
 	ResourcePostgresRoleBinding     = "postgresrolebinding"
 	ResourcePostgresRoleBindings    = "postgresrolebindings"
@@ -77,10 +81,33 @@ type PostgresRoleList struct {
 	Items []PostgresRole `json:"items,omitempty"`
 }
 
+type PostgresRolePhase string
+
 type PostgresRoleStatus struct {
 	// observedGeneration is the most recent generation observed for this PostgresROle. It corresponds to the
 	// PostgresROle's generation, which is updated on mutation by the API Server.
 	ObservedGeneration int64 `json:"observedGeneration,omitempty"`
+
+	// Specifies the phase of the PostgresRole
+	Phase PostgresRolePhase `json:"phase,omitempty"`
+
+	// Represents the latest available observations of a PostgresRoleBinding current state.
+	Conditions []PostgresRoleCondition `json:"conditions,omitempty"`
+}
+
+// PostgresRoleCondition describes the state of a PostgresRole at a certain point.
+type PostgresRoleCondition struct {
+	// Type of PostgresRole condition.
+	Type string `json:"type,omitempty"`
+
+	// Status of the condition, one of True, False, Unknown.
+	Status v1.ConditionStatus `json:"status,omitempty"`
+
+	// The reason for the condition's.
+	Reason string `json:"reason,omitempty"`
+
+	// A human readable message indicating details about the transition.
+	Message string `json:"message,omitempty"`
 }
 
 type ProviderSpec struct {
@@ -120,6 +147,12 @@ type VaultSpec struct {
 type DatabaseSpec struct {
 	// Specifies the name for this database connection
 	Name string `json:"name"`
+
+	// Specifies the name of the plugin to use for this connection.
+	// Default plugin:
+	//	- for postgres: postgresql-database-plugin
+	//  - for mysql: mysql-database-plugin
+	PluginName string `json:"pluginName,omitempty"`
 
 	// Specifies the PostgreSQL DSN. This field can be templated and supports
 	// passing the username and password parameters in the following format {{field_name}}.
@@ -229,4 +262,85 @@ type PostgresRoleBindingList struct {
 
 	// Items is a list of PostgresRoleBinding objects
 	Items []PostgresRoleBinding `json:"items,omitempty"`
+}
+
+// +genclient
+// +k8s:openapi-gen=true
+// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
+
+// MysqlRole
+type MysqlRole struct {
+	metav1.TypeMeta   `json:",inline,omitempty"`
+	metav1.ObjectMeta `json:"metadata,omitempty"`
+	Spec              MysqlRoleSpec   `json:"spec,omitempty"`
+	Status            MysqlRoleStatus `json:"status,omitempty"`
+}
+
+// MysqlRoleSpec contains connection information, mysql role info etc
+type MysqlRoleSpec struct {
+	Provider *ProviderSpec `json:"provider"`
+	Database *DatabaseSpec `json:"database,omitempty"`
+
+	// links:
+	// 	- https://www.vaultproject.io/api/secret/databases/index.html
+	//	- https://www.vaultproject.io/api/secret/databases/mysql-maria.html
+
+	// The name of the database connection to use for this role.
+	DBName string `json:"dbName"`
+
+	// Specifies the TTL for the leases associated with this role.
+	// Accepts time suffixed strings ("1h") or an integer number of seconds.
+	// Defaults to system/engine default TTL time
+	DefaultTTL string `json:"defaultTTL,omitempty"`
+
+	// Specifies the maximum TTL for the leases associated with this role.
+	// Accepts time suffixed strings ("1h") or an integer number of seconds.
+	// Defaults to system/engine default TTL time.
+	MaxTTL string `json:"maxTTL,omitempty"`
+
+	// https://www.vaultproject.io/api/secret/databases/mysql-maria.html#creation_statements
+	// Specifies the database statements executed to create and configure a user.
+	CreationStatements []string `json:"creationStatements"`
+
+	// https://www.vaultproject.io/api/secret/databases/mysql-maria.html#revocation_statements
+	// Specifies the database statements to be executed to revoke a user.
+	RevocationStatements []string `json:"revocationStatements,omitempty"`
+}
+
+// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
+
+type MysqlRoleList struct {
+	metav1.TypeMeta `json:",inline"`
+	metav1.ListMeta `json:"metadata,omitempty"`
+
+	// Items is a list of MysqlRole objects
+	Items []MysqlRole `json:"items,omitempty"`
+}
+
+type MysqlRolePhase string
+
+type MysqlRoleStatus struct {
+	Phase MysqlRolePhase `json:"phase,omitempty"`
+
+	// observedGeneration is the most recent generation observed for this MysqlRole. It corresponds to the
+	// MysqlRole's generation, which is updated on mutation by the API Server.
+	ObservedGeneration int64 `json:"observedGeneration,omitempty"`
+
+	// Represents the latest available observations of a MysqlRole current state.
+	Conditions []MysqlRoleCondition `json:"conditions,omitempty"`
+}
+
+// MysqlRoleCondition describes the state of a MysqlRole at a certain point.
+type MysqlRoleCondition struct {
+	// Type of MysqlRole condition.
+	Type string `json:"type,omitempty"`
+
+	// Status of the condition, one of True, False, Unknown.
+	Status v1.ConditionStatus `json:"status,omitempty"`
+
+	// The reason for the condition's.
+	Reason string `json:"reason,omitempty"`
+
+	// A human readable message indicating details about the transition.
+	Message string `json:"message,omitempty"`
 }
